# ArchSmarterFamFab

./: .gitignore  AGENTS.md  ArchSmarterFamFab.slnx  LICENSE  README.md  pyproject.toml  triposr_cli.py
ArchSmarterFamFab/: App.cs  ArchSmarterFamFab.addin  ArchSmarterFamFab.csproj  CLAUDE.md  CmdFamFab.cs  CmdSetting.cs  README.md
ArchSmarterFamFab/Data/: ClaudeClient.cs  FamFabHistoryManager.cs  FamFabSettings.cs  FamFabSettingsManager.cs  FamilyGenerator.cs  GeminiClient.cs  IFamilyModelClient.cs  ImageInput.cs  KimiClient.cs  LlmClientFactory.cs  LlmException.cs  LlmProviders.cs  LlmSupport.cs  SkillResources.cs  TripoSRClient.cs  TripoSRDependencyInstaller.cs
ArchSmarterFamFab/EmbeddedContent/: SKILL.md  family-schema.json  revit-family-viewer.html
ArchSmarterFamFab/Helpers/: ButtonDataClass.cs  CommandAvailability.cs  GlobalUsing.cs  Utils.cs
ArchSmarterFamFab/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
ArchSmarterFamFab/UI/: FamFabStyles.xaml  GenerateWindow.xaml  GenerateWindow.xaml.cs  InstallerWindow.xaml  InstallerWindow.xaml.cs  PreviewWindow.xaml  PreviewWindow.xaml.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs  SettingsWindowViewModel.cs
ArchSmarterFamFab/docs/reference/: revit-family-generator.skill  revit-family-viewer.html
ArchSmarterFamFab/docs/reference/skill_extracted/revit-family-generator/: SKILL.md
ArchSmarterFamFab/docs/reference/skill_extracted/revit-family-generator/references/: example-cabinet.json
ArchSmarterFamFab/docs/reference/skill_extracted/revit-family-generator/scripts/: validate_family.py
