[project]
name = "famfab-triposr"
version = "0.1.0"
description = "TripoSR integration for ArchSmarter FamFab"
requires-python = ">=3.13,<3.14"

dependencies = [
    "torch>=2.6.0",
    "numpy>=2.1.0",
    "pillow>=11.0.0",
    "xatlas>=0.0.11",
    "rembg[cpu]>=2.0.50",
    "scikit-image>=0.25.0",
    "trimesh>=4.0.0",
    "einops>=0.8.0",
    "huggingface-hub>=0.27.0",
    "transformers>=4.47.0",
    "safetensors>=0.5.0",
    "omegaconf>=2.3.0",
    "moderngl>=5.10.0",
    "gradio>=5.0.0",
    # torchmcubes is installed separately by TripoSRDependencyInstaller because
    # the upstream source requires local patches (C++20 standard + Ninja generator)
    # to build reliably on Windows against current PyTorch wheels.
]

[tool.uv]
# PyPI is the default index. The PyTorch CUDA 12.6 index is added below as an
# extra index, and torch is pinned to it so uv installs the CUDA wheel instead
# of the CPU-only wheel from PyPI.

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"

[tool.uv.sources]
torch = { index = "pytorch-cu126" }

[tool.setuptools]
# The add-in is not a Python package; it only declares dependencies.
# Tell setuptools not to auto-discover triposr/ or runtimes/ as packages,
# which would break the editable install with a flat-layout error.
packages = []
